# ansible-role-qdrouterd

./: .gitreview  README.rst  bindep.txt  setup.cfg  setup.py  tox.ini
defaults/: main.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  qdrouterd_install.yml  qdrouterd_install_apt.yml  qdrouterd_install_yum.yml  qdrouterd_post_install.yml  qdrouterd_pre_install.yml  qdrouterd_restart.yml  qdrouterd_ssl_key_store.yml  qdrouterd_ssl_self_signed.yml
templates/: qdrouterd.conf.j2
tests/: ansible-role-requirements.yml  qdrouterd-overrides.yml  test-install-previous-qdrouterd.yml  test-install-qdrouterd.yml  test-qdrouterd-functional.yml  test-upgrade-post.yml  test-vars.yml  test.yml
tests/group_vars/: all_containers.yml
vars/: main.yml  redhat.yml  ubuntu.yml
zuul.d/: project.yaml
